--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -163,8 +163,12 @@
     "failed_to_establish_hob": "Failed to establish HOB with {{etype}}: {{e}}",
     "superior_must_specify_entryInfo": "Superior DSA must specify entryInfo to establish a new hierarchical operational binding.",
     "hob_invalid_entryInfo": "The potential superior DSA supplied entryInfo that describes an entry that is invalid for this reason: {{e}}.",
-    "cert_path_invalid": "COULD_BAN={{host}}; Invalid certification path for association {{aid}} on invocation {{iid}}.",
-    "invalid_signature_on_arg": "COULD_BAN={{host}}; Invalid signature for invocation {{iid}} from association {{aid}}.",
+    "cert_path_invalid@arg": "COULD_BAN={{host}}; Invalid certification path for association {{aid}} on invocation {{iid}}.",
+    "cert_path_invalid@result": "Invalid certification path in result of invocation {{iid}} from access point {{ap}}.",
+    "invalid_signature@arg": "COULD_BAN={{host}}; Invalid signature for invocation {{iid}} from association {{aid}}.",
+    "invalid_signature@result": "Invalid signature on result for invocation {{iid}} from access point {{ap}}.",
     "cert_path_required_signed@arg": "COULD_BAN={{host}}; Certification-path parameter is required when providing a signed argument, but was missing from invocation {{iid}} from association {{aid}}.",
-    "cert_path_issuedToThisCA": "COULD_BAN={{host}}; Certification-path CA certifications must use the issuedToThisCA field for CA certs--a constraint violated in invocation {{iid}} from association {{aid}}."
+    "cert_path_required_signed@result": "Certification-path parameter is required when providing a signed result, but was missing from the result of invocation {{iid}} from access point {{ap}}.",
+    "cert_path_issuedToThisCA@arg": "COULD_BAN={{host}}; Certification-path CA certifications must use the issuedToThisCA field for CA certs--a constraint violated in invocation {{iid}} from association {{aid}}.",
+    "cert_path_issuedToThisCA@result": "Certification-path CA certifications must use the issuedToThisCA field for CA certs--a constraint violated in invocation {{iid}} from access point {{ap}}."
 }
