--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -171,6 +171,12 @@
     "cert_path_required_signed@result": "Certification-path parameter is required when providing a signed result, but was missing from the result of invocation {{iid}} from access point {{ap}}.",
     "cert_path_issuedToThisCA@arg": "COULD_BAN={{host}}; Certification-path CA certifications must use the issuedToThisCA field for CA certs--a constraint violated in invocation {{iid}} from association {{aid}}.",
     "cert_path_issuedToThisCA@result": "Certification-path CA certifications must use the issuedToThisCA field for CA certs--a constraint violated in invocation {{iid}} from access point {{ap}}.",
+    "cert_path_issuedToThisCA@token": "Strong credentials certification-path CA certifications must use the issuedToThisCA field for CA certs.",
     "ob_type_unrecognized": "Operational binding type {{obtype}} not understood.",
-    "ob_binding_id_identifier_changed": "Operation binding identifier cannot be changed for operational binding {{uuid}}."
+    "ob_binding_id_identifier_changed": "Operation binding identifier cannot be changed for operational binding {{uuid}}.",
+    "strong_creds_must_have_name_or_cp": "Strong credentials must contain either a name or a certification-path.",
+    "strong_creds_expired": "Strong credentials token expired at {{time}}.",
+    "strong_creds_algorithm_mismatch": "Strong credentials signing algorithm mismatch. Bind token's algorithm identifier must match token content's algorithm.",
+    "strong_creds_token_wrong_name": "Strong credentials bind token name did not match the AE-title of this DSA.",
+    "strong_creds_name_cert_mismatch": "Strong credentials name does not match subject name in certification path."
 }
