--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -117,5 +117,8 @@
     "modifyOperationalBinding@succeeded": "Operational binding of type {{type}} and ID {{bid}} was modified by association {{aid}}.",
     "terminateOperationalBinding@succeeded": "Operational binding of type {{type}} and ID {{bid}} was terminated by association {{aid}}.",
     "could_not_establish_connection": "Could not establish connection with DSA '{{ae}}' to chain operation {{iid}}.",
-    "could_not_establish_connection@with_error": "Could not establish connection with DSA '{{ae}}' to chain operation {{iid}} because of this error: {{e}}"
+    "could_not_establish_connection@with_error": "Could not establish connection with DSA '{{ae}}' to chain operation {{iid}} because of this error: {{e}}",
+    "strong_cred_error@malformed": "COULD_BAN={{host}}; Strong credentials malformed.",
+    "strong_cred_error@untrusted": "COULD_BAN={{host}}; Strong credentials certification-path was not trusted.",
+    "strong_cred_error@invalid_sig": "COULD_BAN={{host}}; Strong credentials had an invalid cryptographic signature."
 }
