Log docs link on startup

--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -120,5 +120,6 @@
     "could_not_establish_connection@with_error": "Could not establish connection with DSA '{{ae}}' to chain operation {{iid}} because of this error: {{e}}",
     "strong_cred_error@malformed": "COULD_BAN={{host}}; Strong credentials malformed.",
     "strong_cred_error@untrusted": "COULD_BAN={{host}}; Strong credentials certification-path was not trusted.",
-    "strong_cred_error@invalid_sig": "COULD_BAN={{host}}; Strong credentials had an invalid cryptographic signature."
+    "strong_cred_error@invalid_sig": "COULD_BAN={{host}}; Strong credentials had an invalid cryptographic signature.",
+    "docs": "Documentation on Meerkat DSA can be found here: https://wildboar-software.github.io/directory/"
 }
