Remove sensitive data from err log messages

--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -89,7 +89,7 @@
     "unrecognized_ob_end_time_syntax": "Unrecognized operational binding end time syntax.",
     "hob_contextprefixinfo_did_not_match": "Operational binding contextPrefixInfo did not match immediateSuperior.",
     "ob_rejected": "Operational binding {{uuid}} rejected.",
-    "ob_rejected@timeout": "Operational binding {{uuid}} was automatically rejected by.",
+    "ob_rejected@timeout": "Operational binding {{uuid}} was automatically rejected due to timing out.",
     "unrecognized_ob_initiator_syntax": "Operational binding initiator syntax unrecognized.",
     "no_ob_with_id": "No operational binding with identifier {{id}}.",
     "can_only_list_or_search_root": "Only a list or search operation may target the root DSE.",
@@ -145,8 +145,8 @@
     "not_authz_browse": "Not authorized to browse or return the distinguished name of this entry. Its existence was disclosed because of an error.",
     "unrecognized_ext_op": "Unrecognized extended operation.",
     "tls_already_in_use": "TLS is already in use.",
-    "anon_bind_disabled": "COULD_BAN={{host}}; Client {{host}} attempted to bind anonymously, but anonymous binds are disabled.",
-    "invalid_credentials": "COULD_BAN={{host}}; Client {{host}} attempted to bind with invalid credentials.",
+    "anon_bind_disabled": "Anonymous binds are disabled.",
+    "invalid_credentials": "Invalid credentials.",
     "one_subschema": "There may only be one subschema subentry in a subschema administrative area. One already exists with the DSE UUID {{uuid}}.",
     "subschema_whole_area": "A subschema subentry's subtree specification must cover the entire subschema administrative area (e.g. an empty sequence).",
     "no_gsr": "Cannot insert beneath DSE {{uuid}}, which has no governing structure rule. Configure a subschema administrative area first.",
@@ -162,17 +162,17 @@
     "could_not_find_new_subr": "Could not locate the subordinate reference DSE that was just created locally.",
     "failed_to_establish_hob": "Failed to establish HOB with {{etype}}: {{e}}",
     "superior_must_specify_entryInfo": "Superior DSA must specify entryInfo to establish a new hierarchical operational binding.",
-    "hob_invalid_entryInfo": "The potential superior DSA supplied entryInfo that describes an entry that is invalid for this reason: {{e}}.",
-    "cert_path_invalid@arg": "COULD_BAN={{host}}; Invalid certification path for association {{aid}} on invocation {{iid}}.",
-    "cert_path_invalid@result": "Invalid certification path in result of invocation {{iid}} from access point {{ap}}.",
+    "hob_invalid_entryInfo": "Entry info describes an entry that is invalid for this reason: {{e}}.",
+    "cert_path_invalid@arg": "Invalid certification path.",
+    "cert_path_invalid@result": "Invalid certification path.",
     "invalid_key_usage": "Invalid key usage on the end-entity certificate used for cryptographic signature.",
     "invalid_pkup": "End-entity private key not permitted by the certificate's private key usage period.",
-    "invalid_signature@arg": "COULD_BAN={{host}}; Invalid signature for invocation {{iid}} from association {{aid}}.",
-    "invalid_signature@result": "Invalid signature on result for invocation {{iid}} from access point {{ap}}.",
-    "cert_path_required_signed@arg": "COULD_BAN={{host}}; Certification-path parameter is required when providing a signed argument, but was missing from invocation {{iid}} from association {{aid}}.",
-    "cert_path_required_signed@result": "Certification-path parameter is required when providing a signed result, but was missing from the result of invocation {{iid}} from access point {{ap}}.",
-    "cert_path_issuedToThisCA@arg": "COULD_BAN={{host}}; Certification-path CA certifications must use the issuedToThisCA field for CA certs--a constraint violated in invocation {{iid}} from association {{aid}}.",
-    "cert_path_issuedToThisCA@result": "Certification-path CA certifications must use the issuedToThisCA field for CA certs--a constraint violated in invocation {{iid}} from access point {{ap}}.",
+    "invalid_signature@arg": "Invalid signature.",
+    "invalid_signature@result": "Invalid signature.",
+    "cert_path_required_signed@arg": "Certification-path parameter is required when providing a signed argument.",
+    "cert_path_required_signed@result": "Certification-path parameter is required when providing a signed result.",
+    "cert_path_issuedToThisCA@arg": "Certification-path CA certifications must use the issuedToThisCA field for CA certs.",
+    "cert_path_issuedToThisCA@result": "Certification-path CA certifications must use the issuedToThisCA field for CA certs.",
     "cert_path_issuedToThisCA@token": "Strong credentials certification-path CA certifications must use the issuedToThisCA field for CA certs.",
     "ob_type_unrecognized": "Operational binding type {{obtype}} not understood.",
     "ob_binding_id_identifier_changed": "Operation binding identifier cannot be changed for operational binding {{uuid}}.",
