--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -126,5 +126,17 @@
     "auth_failure_web_admin": "COULD_BAN={{host}}; Failed authentication in web admin portal.",
     "auth_success_web_admin": "Successful authentication to web admin portal from {{host}}.",
     "no_auth_web_admin": "Remote host {{host}} logged into the web admin portal without authentication, since authentication was not configured.",
-    "web_admin_http": "Web admin console: {{method}} {{path}} from {{host}}"
+    "web_admin_http": "Web admin console: {{method}} {{path}} from {{host}}",
+    "anon_bind_disabled": "COULD_BAN={{host}}; Client {{host}} attempted to bind anonymously, but anonymous binds are disabled.",
+    "invalid_credentials": "COULD_BAN={{host}}; Client {{host}} attempted to bind with invalid credentials.",
+    "hob_invalid_entryInfo": "The potential superior DSA supplied entryInfo that describes an entry that is invalid for this reason: {{e}}.",
+    "cert_path_invalid@arg": "COULD_BAN={{host}}; Invalid certification path for association {{aid}} on invocation {{iid}}.",
+    "cert_path_invalid@result": "Invalid certification path in result of invocation {{iid}} from access point {{ap}}.",
+    "invalid_signature@arg": "COULD_BAN={{host}}; Invalid signature for invocation {{iid}} from association {{aid}}.",
+    "invalid_signature@result": "Invalid signature on result for invocation {{iid}} from access point {{ap}}.",
+    "cert_path_required_signed@arg": "COULD_BAN={{host}}; Certification-path parameter is required when providing a signed argument, but was missing from invocation {{iid}} from association {{aid}}.",
+    "cert_path_required_signed@result": "Certification-path parameter is required when providing a signed result, but was missing from the result of invocation {{iid}} from access point {{ap}}.",
+    "cert_path_issuedToThisCA@arg": "COULD_BAN={{host}}; Certification-path CA certifications must use the issuedToThisCA field for CA certs--a constraint violated in invocation {{iid}} from association {{aid}}.",
+    "cert_path_issuedToThisCA@result": "Certification-path CA certifications must use the issuedToThisCA field for CA certs--a constraint violated in invocation {{iid}} from access point {{ap}}.",
+    "cert_path_issuedToThisCA@token": "Strong credentials certification-path CA certifications must use the issuedToThisCA field for CA certs."
 }
