Use whole cert chain in demo environment

--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -138,5 +138,28 @@
     "cert_path_required_signed@result": "Certification-path parameter is required when providing a signed result, but was missing from the result of invocation {{iid}} from access point {{ap}}.",
     "cert_path_issuedToThisCA@arg": "COULD_BAN={{host}}; Certification-path CA certifications must use the issuedToThisCA field for CA certs--a constraint violated in invocation {{iid}} from association {{aid}}.",
     "cert_path_issuedToThisCA@result": "Certification-path CA certifications must use the issuedToThisCA field for CA certs--a constraint violated in invocation {{iid}} from access point {{ap}}.",
-    "cert_path_issuedToThisCA@token": "Strong credentials certification-path CA certifications must use the issuedToThisCA field for CA certs."
+    "cert_path_issuedToThisCA@token": "Strong credentials certification-path CA certifications must use the issuedToThisCA field for CA certs.",
+    "strong_cred_error@-1": "COULD_BAN={{host}}; Strong credentials invalid: Invalid signature",
+    "strong_cred_error@-2": "COULD_BAN={{host}}; Strong credentials invalid: Revoked via OCSP",
+    "strong_cred_error@-3": "COULD_BAN={{host}}; Strong credentials invalid: Issue reaching OCSP responder",
+    "strong_cred_error@-4": "COULD_BAN={{host}}; Strong credentials invalid: Revoked via CRL",
+    "strong_cred_error@-5": "COULD_BAN={{host}}; Strong credentials invalid: Issue obtaining remote CRL",
+    "strong_cred_error@-6": "COULD_BAN={{host}}; Strong credentials invalid: Malformed certification path",
+    "strong_cred_error@-7": "COULD_BAN={{host}}; Strong credentials invalid: Bad key usage",
+    "strong_cred_error@-8": "COULD_BAN={{host}}; Strong credentials invalid: Bad extended key usage",
+    "strong_cred_error@-9": "COULD_BAN={{host}}; Strong credentials invalid: Unknown critical extension",
+    "strong_cred_error@-10": "COULD_BAN={{host}}; Strong credentials invalid: Duplicate extension",
+    "strong_cred_error@-11": "COULD_BAN={{host}}; Strong credentials invalid: Authority Key Identifier mismatch with Subject Key Identifier",
+    "strong_cred_error@-12": "COULD_BAN={{host}}; Strong credentials invalid: Signed outside of private key usage period",
+    "strong_cred_error@-13": "COULD_BAN={{host}}; Strong credentials invalid: Basic constraints violated: signed by non-CA",
+    "strong_cred_error@-14": "COULD_BAN={{host}}; Strong credentials invalid: Basic constraints violated: signed beyond path length constraint",
+    "strong_cred_error@-15": "COULD_BAN={{host}}; Strong credentials invalid: Invalid critical extension",
+    "strong_cred_error@-16": "COULD_BAN={{host}}; Strong credentials invalid: Untrusted anchor",
+    "strong_cred_error@-17": "COULD_BAN={{host}}; Strong credentials invalid: Invalid time",
+    "strong_cred_error@-18": "COULD_BAN={{host}}; Strong credentials invalid: Issuer-Subject mismatch",
+    "strong_cred_error@-19": "COULD_BAN={{host}}; Strong credentials invalid: Name not permitted by name constraints",
+    "strong_cred_error@-20": "COULD_BAN={{host}}; Strong credentials invalid: Name explicitly excluded by name constraints",
+    "strong_cred_error@-21": "COULD_BAN={{host}}; Strong credentials invalid: Prohibited signature algorithm",
+    "strong_cred_error@-22": "COULD_BAN={{host}}; Strong credentials invalid: Certification policy not acceptable to this DSA",
+    "strong_cred_error@-23": "COULD_BAN={{host}}; Strong credentials invalid: No certification policies valid for the whole certification path"
 }
