--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -192,5 +192,6 @@
     "rose_response_no_invoke_id": "ROSE operation response (result, error, or reject) to {{peer}} enqueued with an absent Invoke-ID. This response will not be sent.",
     "osi_transport_error": "OSI transport error (ER TPDU) received from {{peer}} (DST-REF {{dst}}) with reason {{reason}}.",
     "osi_session_abort": "OSI session provider abort (AB SPDU) received from {{peer}}.",
-    "osi_presentation_abort": "OSI presentation provider abort (ARP PPDU) received from {{peer}} for event ID {{eid}} and with reason code {{reason}}."
+    "osi_presentation_abort": "OSI presentation provider abort (ARP PPDU) received from {{peer}} for event ID {{eid}} and with reason code {{reason}}.",
+    "will_not_bind_to_db_port": "This DSA has refused to bind to another network address to fulfill a request initiated by association {{aid}} to {{uri}} because it has the same port as the database."
 }
