Possibly fix TLS issue

--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -193,5 +193,6 @@
     "mismatch_sec_params_opcode_common_args": "Operation code does not match operation code indicated in security parameters of the original DAP argument.",
     "mismatch_sec_params_opcode_chaining_args": "Operation code does not match operation code indicated in security parameters of the chaining arguments.",
     "aliased_rdns_lt0": "aliasedRDNs field was less than zero.",
-    "not_authz_chaining@add_entry_target_system": "Association {{aid}} not authorized for chaining via the addEntry targetSystem parameter."
+    "not_authz_chaining@add_entry_target_system": "Association {{aid}} not authorized for chaining via the addEntry targetSystem parameter.",
+    "tls_auth_failure": "TLS authentication of {{url}} failed with error {{e}}. The socket has been closed."
 }
